# ngeom

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/: Cargo.toml
crates/ngeom/: Cargo.toml
crates/ngeom-macros/: Cargo.toml
crates/ngeom-macros/src/: lib.rs  lib.rs.bak
crates/ngeom-poly/: Cargo.toml
crates/ngeom-poly/src/: lib.rs
crates/ngeom-polygon/: Cargo.toml
crates/ngeom-polygon/src/: graph.rs  lib.rs  triangulate.rs
crates/ngeom/src/: algebraic_ops.rs  lib.rs  ops.rs  re2.rs  re3.rs  scalar.rs  test.rs  v2.rs
demo/draw2d/: Cargo.toml
demo/draw2d/src/: lib.rs  main.rs  output_writer.rs  render.rs
demo/ngeom-demo-physics/: Cargo.toml  index.html  index.js  package-lock.json  webpack.config.js
demo/ngeom-demo-physics/src/: lib.rs  main.rs  web.rs
demo/physics/: Cargo.toml
demo/physics/src/: lib.rs  main.rs
ngeom/: Cargo.toml
ngeom-macros/: Cargo.toml
ngeom-macros/src/: lib.rs
ngeom-macros/tests/: integration_test.rs
ngeom/examples/: 2dpga.rs  physics.rs
ngeom/src/: lib.rs  re3.rs
