[package]
name = "ngeom-macros"
version = "0.1.0"
authors = ["Eric Van Albert"]
description = "Internal proc-macro crate for ngeom"
repository = "https://github.com/ervanalb/ngeom"
edition = "2021"
license = "MIT"
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.71", features = ["full"]}
quote = "1.0.36"
proc-macro2 = "1.0.86"
