[package]
name = "ngeom-poly"
version = "0.1.0"
authors = ["Eric Van Albert"]
description = "Geometry in N dimensions"
repository = "https://github.com/ervanalb/ngeom"
edition = "2021"
readme = "../../README.md"
license = "MIT"
keywords = ["geometry", "graphics"]
categories = ["data-structures", "mathematics", "no-std", "graphics"]

[dependencies]
ngeom = { path = "../ngeom" }
enum_dispatch = "0.3.13"
derive_more = { version = "1.0.0", features = ["full"] }
