[package]
name = "ngeom-polygon"
version = "0.1.0"
authors = ["Eric Van Albert"]
description = "Polygon algorithms like triangulation"
repository = "https://github.com/ervanalb/ngeom"
edition = "2021"
readme = "../../README.md"
license = "MIT"
keywords = ["geometry", "graphics"]
categories = ["data-structures", "mathematics", "graphics"]

[dependencies]
ngeom = { path = "../ngeom" }
