[package]
name = "ngeom-demo-physics"
version = "0.1.0"
edition = "2021"

[dependencies]
ngeom = { path = "../../crates/ngeom" }
eframe = "0.29.0"
log = "0.4.22"

[lib]
crate-type = ["cdylib", "rlib"]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.10", default-features = false, features = [
  "auto-color",
  "humantime",
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"
